<resources>
    <string name="app_name">Bronco Shuttle Plus</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_options">Options</string>

    <!-- Strings related to Settings -->

    <string name="search_hint">Search the Directory</string>

    <!-- Example General settings -->
    <string name="pref_header_customize">Customization</string>


    <string name="pref_bg_color_label">Colors</string>
    <string-array name="pref_bg_color_titles">
        <item>Rose</item>
        <item>Dark Red</item>
        <item>Orange</item>
        <item>Light Blue</item>
        <item>Dark Blue</item>
        <item>Green</item>
        <item>Dark Green</item>
        <item>Aqua</item>
        <item>Dark Gray</item>
        <item>Black</item>
    </string-array>
    <string-array name="pref_bg_color_values">
        <item>rose</item>
        <item>darkRed</item>
        <item>orange</item>
        <item>lightBlue</item>
        <item>darkBlue</item>
        <item>green</item>
        <item>darkGreen</item>
        <item>aqua</item>
        <item>darkGray</item>
        <item>black</item>
    </string-array>

    <string name="main_menu_copyright">version. %s © 2015–2017. Dave Luk</string>
    <string name="main_menu_options_caption">Options</string>
    <string name="main_menu_nav_caption">Navigation</string>
    <string name="main_menu_details_caption">Details</string>
    <string name="main_menu_liveMap_caption">Live Maps</string>
    <string name="pref_bg_color_key">bgColor</string>
    <string name="pref_main_key">settings</string>
    <string name="main_menu_main_logo_caption">Bronco Shuttle +</string>
    <string name="title_activity_details">Details</string>
    <string name="details_adv_route_shuttle_text">Shuttles</string>
    <string name="details_adv_route_stops_text">Route Stops</string>
    <string name="menu_wip">Work in progress!</string>
    <string name="title_activity_live_maps">Live Maps</string>
    <string name="shuttle_route">Shuttle Route</string>
    <string name="search_name">Search</string>
    <string name="nearest_stop">Nearest Stop</string>
    <string name="dialog_nearest_dismiss">Dismiss</string>
    <string name="dialog_nearst_title">Nearest Stops</string>
    <string name="nearest_stops">Nearest Stops</string>
    <string name="too_far_text">You are far far away! :(</string>
    <string name="error">Error!</string>
    <string name="splash_screen_label">Splash Screen</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigate">Navigate</string>
    <string name="action_bar_title_navigation">Navigation</string>
    <string name="info_view_error">Error</string>
</resources>
